# leodrive_gatevcu_driver

./: CMakeLists.txt  README.md  dual_shock.drawio  gatevcu.repos  package.xml  run_gatevcu.bash
leodrive_gatevcu_adapter/: CMakeLists.txt  package.xml
leodrive_gatevcu_adapter/include/leodrive_gatevcu_adapter/: vcu_sender.hpp
leodrive_gatevcu_adapter/include/leodrive_gatevcu_adapter/can_interface/: dbccodeconf.h  drivedb-binutil.h  drivedb-config.h  drivedb-fmon.h  drivedb.h
leodrive_gatevcu_adapter/include/leodrive_gatevcu_driver/: vcu_receiver.hpp  vcu_sender.hpp
leodrive_gatevcu_adapter/src/: vcu_receiver.cpp  vcu_sender.cpp
leodrive_gatevcu_adapter/src/can_interface/: drivedb-binutil.c  drivedb-fmon.c  drivedb.c
leodrive_gatevcu_driver/: CMakeLists.txt  package.xml
leodrive_gatevcu_driver/config/: driver.yaml
leodrive_gatevcu_driver/launch/: driver.launch.xml
leodrive_gatevcu_joy/: CMakeLists.txt  package.xml
leodrive_gatevcu_joy/include/leodrive_gatevcu_joy/: axis.hpp  axis_handler.hpp  axis_types.hpp  button.hpp  button_handler.hpp  button_types.hpp  logger.hpp  press_detector.hpp  vcu_joy_handler.hpp
leodrive_gatevcu_joy/src/: axis.cpp  axis_handler.cpp  button.cpp  button_handler.cpp  press_detector.cpp  vcu_joy_handler.cpp
leodrive_gatevcu_msgs/: CMakeLists.txt  package.xml
leodrive_gatevcu_msgs/msg/: Longitudinal.msg  SteeringWheel.msg  Vehicle.msg
msg/: SteeringWheel.msg
